Fixing list post; Fixing update post; Fixing docs
